[gd_scene load_steps=9 format=3 uid="uid://cugs6ixvklnpn"]

[ext_resource type="Theme" uid="uid://d27558cdkugpr" path="res://Assets/Resources/MainTheme.tres" id="1_oqssu"]
[ext_resource type="PackedScene" uid="uid://42pus6g3tefj" path="res://Scenes/Components/AlbumCover.tscn" id="1_vr22n"]
[ext_resource type="Script" path="res://Scenes/Components/HomeMenu/AlbumMusicTab.gd" id="2_mrbvy"]
[ext_resource type="Script" path="res://Scripts/AlbumSongList.gd" id="2_p3o3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y3xs3"]

[sub_resource type="Animation" id="Animation_5r307"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainCont/AlbumInfo:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 275)]
}

[sub_resource type="Animation" id="Animation_73bat"]
resource_name = "Scroll"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainCont/AlbumInfo:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 275), Vector2(0, 150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2myko"]
_data = {
"RESET": SubResource("Animation_5r307"),
"Scroll": SubResource("Animation_73bat")
}

[node name="AlbumMusicTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_oqssu")
script = ExtResource("2_mrbvy")
metadata/_tab_index = 2

[node name="MainCont" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Sep1" type="HSeparator" parent="MainCont"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_y3xs3")

[node name="AlbumInfo" type="PanelContainer" parent="MainCont"]
custom_minimum_size = Vector2(0, 275)
layout_mode = 2

[node name="Hcont" type="HBoxContainer" parent="MainCont/AlbumInfo"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="AlbumCover" parent="MainCont/AlbumInfo/Hcont" instance=ExtResource("1_vr22n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(243, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Title" type="Label" parent="MainCont/AlbumInfo/Hcont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 34
text = "AlbumName"
metadata/_edit_use_anchors_ = true

[node name="Sep2" type="HSeparator" parent="MainCont"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_y3xs3")

[node name="Scroll" type="ScrollContainer" parent="MainCont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AlbumMusicList" type="VBoxContainer" parent="MainCont/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("2_p3o3m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2myko")
}

[connection signal="hidden" from="." to="." method="_on_hidden"]
